--- a/package.json
+++ b/package.json
@@ -15,15 +15,24 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.8.0",
     "@expo/metro-runtime": "~3.1.3",
+    "@hookform/resolvers": "^3.3.4",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.90.6",
+    "@tamagui/lucide-icons": "^1.90.6",
     "@tamagui/metro-plugin": "^1.90.6",
+    "aptos": "^1.21.0",
+    "axios": "^1.6.7",
     "babel-preset-expo": "^10.0.1",
+    "buffer": "^6.0.3",
+    "dayjs": "^1.11.10",
     "expo": "~50.0.6",
+    "expo-camera": "~14.0.5",
     "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.1",
+    "expo-linking": "^6.2.2",
     "expo-router": "~3.4.7",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -35,11 +44,17 @@
     "react-helmet-async": "~2.0.4",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "^0.19.9",
+    "react-query": "^3.39.3",
     "tamagui": "^1.90.6",
+    "text-encoder": "^0.0.4",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "typescript": "^5.3.3",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
@@ -47,7 +62,8 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@types/lodash": "^4",
-    "@types/react": "~18.2.14"
+    "@types/react": "~18.2.14",
+    "@types/react-native-get-random-values": "^1"
   },
   "private": true,
   "packageManager": "yarn@4.0.2"
