--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "dayjs": "^1.11.10",
     "expo": "~50.0.6",
     "expo-camera": "~14.0.5",
+    "expo-file-system": "~16.0.7",
     "expo-font": "~11.10.2",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "^6.2.2",
     "expo-router": "~3.4.7",
     "expo-secure-store": "~12.8.1",
