--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "aptos": "^1.21.0",
     "axios": "^1.6.7",
     "babel-preset-expo": "^10.0.1",
+    "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
     "expo": "~50.0.6",
     "expo-camera": "~14.0.5",
+    "expo-clipboard": "~5.0.1",
     "expo-file-system": "~16.0.7",
     "expo-font": "~11.10.2",
     "expo-image-picker": "~14.7.1",
