--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "compile": "graphql-codegen",
+    "watch": "graphql-codegen -w"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@aptos-labs/ts-sdk": "^1.8.0",
     "@expo/metro-runtime": "~3.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.90.6",
     "@tamagui/lucide-icons": "^1.90.6",
@@ -41,6 +45,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "graphql": "^15.8.0",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -49,9 +54,11 @@
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
     "react-native-get-random-values": "^1.10.0",
+    "react-native-mmkv": "^2.12.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-storage": "^1.0.1",
     "react-native-svg": "^14.1.0",
     "react-native-web": "^0.19.9",
     "react-query": "^3.39.3",
@@ -65,6 +72,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.2.4",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@types/lodash": "^4",
     "@types/react": "~18.2.14",
     "@types/react-native-get-random-values": "^1"
