--- a/package.json
+++ b/package.json
@@ -55,11 +55,13 @@
     "react-native": "0.73.4",
     "react-native-get-random-values": "^1.10.0",
     "react-native-mmkv": "^2.12.1",
+    "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^14.1.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.9",
     "react-query": "^3.39.3",
     "tamagui": "^1.90.6",
