Feat/community support (#12)
* chore: community-support + following + viewing likes + anchors

* discoverability

* Feature/theming (#11)

* bar component

* Update index.tsx

* Update index.tsx

* implement theming

* do some extra theming

* some more theming

* more theming

* Update scan.tsx

* resolve issues

* add padding to seed phrase sign in screen

* fix tamagui.config.ts

---------

Co-authored-by: davidmanga254 <mangadavid2@gmail.com>

* chore: resolving merge conflicts and other ui updates

---------

Co-authored-by: davidmanga254 <mangadavid2@gmail.com>

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "expo-router-example",
-    "slug": "expo-router-example",
-    "version": "1.0.0",
+    "name": "kadetest",
+    "slug": "kadetest",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "kadetest",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -16,13 +16,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.dduke.kadetest"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.dduke.kadetest"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +38,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4ab9f120-4f60-4510-a7cf-ac71a8833dbd"
+      }
     }
   }
 }
