--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
     "@tamagui/config": "^1.90.6",
     "@tamagui/lucide-icons": "^1.90.6",
     "@tamagui/metro-plugin": "^1.90.6",
+    "@tanstack/react-query": "^5.27.5",
     "aptos": "^1.21.0",
     "axios": "^1.6.7",
     "babel-preset-expo": "^10.0.1",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
-    "expo": "~50.0.6",
-    "expo-camera": "~14.0.5",
+    "expo": "~50.0.11",
+    "expo-camera": "~14.0.6",
     "expo-clipboard": "~5.0.1",
-    "expo-file-system": "~16.0.7",
-    "expo-font": "~11.10.2",
+    "expo-file-system": "~16.0.8",
+    "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "^6.2.2",
-    "expo-router": "~3.4.7",
+    "expo-router": "~3.4.8",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -53,8 +54,7 @@
     "react-helmet-async": "~2.0.4",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
-    "react-native-get-random-values": "^1.10.0",
-    "react-native-mmkv": "^2.12.1",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
