Feat/settings screen mentions (#17)
* chore: support for communities and profile editing + ui updates

* Feature/themeing 2 (#15)

* implement theming on communities page and unstyled button

* publication and communities theming

---------

Co-authored-by: davidmanga254 <mangadavid2@gmail.com>

* feat: mentions + updates to settings screen

---------

Co-authored-by: davidmanga254 <mangadavid2@gmail.com>

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "kadetest",
     "slug": "kadetest",
-    "version": "0.0.1",
+    "version": "0.0.4",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "kadetest",
@@ -12,9 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.dduke.kadetest"
@@ -31,11 +29,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-font",
-      "expo-secure-store"
-    ],
+    "plugins": ["expo-router", "expo-font", "expo-secure-store"],
     "experiments": {
       "typedRoutes": true
     },
