--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.5",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-opengraph-kit": "^3.0.1",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
