--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/lodash": "^4",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-get-random-values": "^1"
   },
   "private": true,
