--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
-    "expo": "~50.0.13",
+    "expo": "~50.0.14",
     "expo-camera": "~14.1.1",
     "expo-clipboard": "~5.0.1",
+    "expo-device": "~5.9.3",
     "expo-file-system": "~16.0.8",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "^6.2.2",
+    "expo-notifications": "~0.27.6",
     "expo-router": "~3.4.8",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
@@ -53,7 +55,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
     "react-hook-form": "^7.50.1",
-    "react-native": "0.73.5",
+    "react-native": "0.73.6",
     "react-native-get-random-values": "~1.8.0",
     "react-native-opengraph-kit": "^3.0.1",
     "react-native-pager-view": "6.2.3",
