--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.dduke.kadetest"
@@ -29,7 +31,11 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-secure-store"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-secure-store"
+    ],
     "experiments": {
       "typedRoutes": true
     },
@@ -38,8 +44,9 @@
         "origin": false
       },
       "eas": {
-        "projectId": "4ab9f120-4f60-4510-a7cf-ac71a8833dbd"
+        "projectId": "5a011be0-cd42-40c5-a4d0-09de9f750aa9"
       }
-    }
+    },
+    "owner": "kade-net"
   }
 }
