--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo": "~50.0.14",
     "expo-camera": "~14.1.1",
     "expo-clipboard": "~5.0.1",
+    "expo-constants": "^15.4.5",
     "expo-device": "~5.9.3",
     "expo-file-system": "~16.0.8",
     "expo-font": "~11.10.3",
@@ -84,8 +85,8 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/lodash": "^4",
     "@types/react": "~18.2.14",
-    "@types/react-native": "^0.73.0",
-    "@types/react-native-get-random-values": "^1"
+    "@types/react-native-get-random-values": "^1",
+    "dotenv": "^16.4.5"
   },
   "private": true,
   "packageManager": "yarn@4.0.2"
