--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "^0.19.9",
     "react-query": "^3.39.3",
     "tamagui": "^1.90.6",
