--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-file-system": "~16.0.8",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "^6.2.2",
     "expo-navigation-bar": "~2.8.1",
     "expo-notifications": "~0.27.6",
