--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
     "expo": "~50.0.14",
+    "expo-application": "~5.8.3",
     "expo-camera": "~14.1.1",
     "expo-clipboard": "~5.0.1",
     "expo-constants": "^15.4.5",
@@ -44,6 +45,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "^6.2.2",
+    "expo-localization": "~14.8.3",
     "expo-navigation-bar": "~2.8.1",
     "expo-notifications": "~0.27.6",
     "expo-router": "~3.4.8",
@@ -55,6 +57,7 @@
     "graphql": "^15.8.0",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
+    "posthog-react-native": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
