--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "expo-updates": "~0.24.12",
     "expo-web-browser": "~12.8.2",
     "graphql": "^15.8.0",
     "immer": "^10.0.3",
