--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "^6.2.2",
     "expo-localization": "~14.8.4",
+    "expo-media-library": "~15.9.2",
     "expo-navigation-bar": "~2.8.1",
     "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.8",
