--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-localization": "~14.8.4",
     "expo-media-library": "~15.9.2",
     "expo-navigation-bar": "~2.8.1",
+    "expo-network": "~5.8.0",
     "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.8",
     "expo-secure-store": "~12.8.1",
