--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
+    "ed2curve": "^0.3.0",
     "effect": "^3.1.0",
     "expo": "~50.0.17",
     "expo-application": "~5.8.4",
@@ -63,6 +64,7 @@
     "expo-web-browser": "~12.8.2",
     "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
+    "graphql-ws": "^5.16.0",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "posthog-react-native": "^3.1.0",
@@ -99,6 +101,7 @@
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@graphql-codegen/typescript-operations": "^4.2.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@types/ed2curve": "^0.2.4",
     "@types/lodash": "^4",
     "@types/react": "~18.2.14",
     "@types/react-native-get-random-values": "^1",
