--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aptos-labs/ts-sdk": "^1.8.0",
     "@expo/metro-runtime": "~3.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@kade-net/portals-parser": "^0.0.3",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.90.6",
