--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@kade-net/portals-parser": "^0.0.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.90.6",
     "@tamagui/lucide-icons": "^1.90.6",
@@ -34,35 +34,35 @@
     "@tanstack/react-query": "^5.27.5",
     "aptos": "^1.21.0",
     "axios": "^1.6.7",
-    "babel-preset-expo": "^10.0.1",
+    "babel-preset-expo": "~11.0.0",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
     "ed2curve": "^0.3.0",
     "effect": "^3.1.0",
-    "expo": "~50.0.17",
-    "expo-application": "~5.8.4",
-    "expo-camera": "~14.1.3",
-    "expo-clipboard": "~5.0.1",
-    "expo-constants": "~15.4.6",
-    "expo-device": "~5.9.4",
-    "expo-file-system": "~16.0.9",
-    "expo-font": "~11.10.3",
-    "expo-haptics": "^12.8.1",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "^6.2.2",
-    "expo-localization": "~14.8.4",
-    "expo-media-library": "~15.9.2",
-    "expo-navigation-bar": "~2.8.1",
-    "expo-notifications": "~0.27.7",
-    "expo-router": "~3.4.8",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.4",
-    "expo-updates": "~0.24.12",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.1",
+    "expo-application": "~5.9.1",
+    "expo-camera": "~15.0.5",
+    "expo-clipboard": "~6.0.3",
+    "expo-constants": "~16.0.1",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.4",
+    "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.4",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-media-library": "~16.0.3",
+    "expo-navigation-bar": "~3.0.4",
+    "expo-notifications": "~0.28.1",
+    "expo-router": "~3.5.11",
+    "expo-secure-store": "~13.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-updates": "~0.25.10",
+    "expo-web-browser": "~13.0.3",
     "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
     "graphql-ws": "^5.16.0",
@@ -73,15 +73,15 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
     "react-hook-form": "^7.50.1",
-    "react-native": "0.73.6",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native": "0.74.1",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-opengraph-kit": "^3.0.1",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "3.10.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-storage": "^1.0.1",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "^0.19.9",
@@ -95,7 +95,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.3",
+    "@babel/core": "^7.24.0",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.2.4",
     "@graphql-codegen/import-types-preset": "^3.0.0",
@@ -104,7 +104,7 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/ed2curve": "^0.2.4",
     "@types/lodash": "^4",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.79",
     "@types/react-native-get-random-values": "^1",
     "dotenv": "^16.4.5"
   },
