--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dayjs": "^1.11.10",
     "ed2curve": "^0.3.0",
     "effect": "^3.1.0",
-    "expo": "^51.0.1",
+    "expo": "~51.0.2",
     "expo-application": "~5.9.1",
     "expo-camera": "~15.0.5",
     "expo-clipboard": "~6.0.3",
@@ -61,7 +61,7 @@
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
-    "expo-updates": "~0.25.10",
+    "expo-updates": "~0.25.11",
     "expo-web-browser": "~13.0.3",
     "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
@@ -77,7 +77,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-opengraph-kit": "^3.0.1",
     "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-storage": "^1.0.1",
