--- a/package.json
+++ b/package.json
@@ -41,29 +41,29 @@
     "dayjs": "^1.11.10",
     "ed2curve": "^0.3.0",
     "effect": "^3.1.0",
-    "expo": "~51.0.10",
+    "expo": "~51.0.14",
     "expo-application": "~5.9.1",
-    "expo-camera": "~15.0.10",
+    "expo-camera": "~15.0.11",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.6",
+    "expo-font": "~12.0.7",
     "expo-haptics": "~13.0.1",
     "expo-image-picker": "~15.0.5",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-media-library": "~16.0.3",
-    "expo-navigation-bar": "~3.0.5",
-    "expo-notifications": "~0.28.7",
-    "expo-router": "~3.5.15",
+    "expo-navigation-bar": "~3.0.6",
+    "expo-notifications": "~0.28.9",
+    "expo-router": "~3.5.16",
     "expo-secure-store": "~13.0.1",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.5",
-    "expo-updates": "~0.25.15",
-    "expo-web-browser": "~13.0.3",
+    "expo-system-ui": "~3.0.6",
+    "expo-updates": "~0.25.17",
+    "expo-web-browser": "^13.0.3",
     "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
     "graphql-ws": "^5.16.0",
@@ -74,7 +74,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
     "react-hook-form": "^7.50.1",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-opengraph-kit": "^3.0.1",
     "react-native-pager-view": "6.3.0",
@@ -86,6 +86,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "^0.19.9",
+    "react-native-webview": "13.8.6",
     "react-query": "^3.39.3",
     "tamagui": "^1.90.6",
     "text-encoder": "^0.0.4",
