--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@kade-net/portals-parser": "^0.0.23",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
-    "@tamagui/config": "^1.90.6",
-    "@tamagui/lucide-icons": "^1.90.6",
-    "@tamagui/metro-plugin": "^1.90.6",
+    "@tamagui/config": "^1.108.2",
+    "@tamagui/lucide-icons": "^1.108.2",
+    "@tamagui/metro-plugin": "^1.108.2",
+    "@tamagui/sheet": "^1.108.2",
     "@tanstack/react-query": "^5.27.5",
     "@xstate/react": "^4.1.1",
     "aptos": "^1.21.0",
@@ -41,28 +42,28 @@
     "dayjs": "^1.11.10",
     "ed2curve": "^0.3.0",
     "effect": "^3.1.0",
-    "expo": "~51.0.14",
+    "expo": "~51.0.25",
     "expo-application": "~5.9.1",
-    "expo-camera": "~15.0.11",
+    "expo-camera": "~15.0.14",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.9",
     "expo-haptics": "~13.0.1",
-    "expo-image-picker": "~15.0.5",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-media-library": "~16.0.3",
-    "expo-navigation-bar": "~3.0.6",
-    "expo-notifications": "~0.28.9",
-    "expo-router": "~3.5.16",
-    "expo-secure-store": "~13.0.1",
+    "expo-media-library": "~16.0.4",
+    "expo-navigation-bar": "~3.0.7",
+    "expo-notifications": "~0.28.15",
+    "expo-router": "~3.5.21",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
-    "expo-updates": "~0.25.17",
+    "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.22",
     "expo-web-browser": "^13.0.3",
     "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
@@ -74,12 +75,13 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
     "react-hook-form": "^7.50.1",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-opengraph-kit": "^3.0.1",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "15.2.0",
@@ -88,7 +90,7 @@
     "react-native-web": "^0.19.9",
     "react-native-webview": "13.8.6",
     "react-query": "^3.39.3",
-    "tamagui": "^1.90.6",
+    "tamagui": "^1.108.2",
     "text-encoder": "^0.0.4",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
