--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
