feat: refactored onboarding + setup wallet

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@apollo/client": "^3.9.5",
     "@aptos-labs/ts-sdk": "^1.8.0",
+    "@clerk/clerk-js": "^5.14.0",
     "@expo/metro-runtime": "~3.2.1",
     "@hookform/resolvers": "^3.3.4",
     "@kade-net/portals-parser": "^0.0.23",
@@ -39,14 +40,17 @@
     "babel-preset-expo": "~11.0.0",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
+    "burnt": "^0.12.2",
     "dayjs": "^1.11.10",
     "ed2curve": "^0.3.0",
     "effect": "^3.1.0",
     "expo": "~51.0.25",
     "expo-application": "~5.9.1",
+    "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.14",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.22",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
@@ -54,6 +58,7 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-local-authentication": "~14.0.1",
     "expo-localization": "~15.0.3",
     "expo-media-library": "~16.0.4",
     "expo-navigation-bar": "~3.0.7",
