--- a/app.json
+++ b/app.json
@@ -41,6 +41,12 @@
       "expo-secure-store",
       "expo-localization",
       [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
+        }
+      ],
+      [
         "expo-media-library",
         {
           "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
