--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,13 @@
     },
     "production": {
       "channel": "production"
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     }
   },
   "submit": {
