--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "effect": "^3.1.0",
     "expo": "~51.0.25",
     "expo-application": "~5.9.1",
+    "expo-av": "~14.0.6",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.14",
     "expo-clipboard": "~6.0.3",
