--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-haptics": "~13.0.1",
+    "expo-image": "~1.12.14",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
@@ -76,6 +77,7 @@
     "graphql-ws": "^5.16.0",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
+    "moti": "^0.29.0",
     "posthog-react-native": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
