--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@clerk/clerk-js": "^5.14.0",
     "@expo/metro-runtime": "~3.2.1",
     "@hookform/resolvers": "^3.3.4",
+    "@kade-net/fgs-rn": "^0.1.5",
     "@kade-net/portals-parser": "^0.0.23",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.108.2",
     "@tamagui/lucide-icons": "^1.108.2",
@@ -84,6 +86,7 @@
     "react-helmet-async": "~2.0.4",
     "react-hook-form": "^7.50.1",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "~1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-opengraph-kit": "^3.0.1",
