--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       },
       "package": "com.kadenet.poseidon",
       "googleServicesFile": "./google-services.json",
-      "versionCode": 60
+      "versionCode": 60,
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "bundler": "metro",
@@ -63,9 +64,6 @@
       ],
       ["./plugins/enableAndroidMaxHeap"]
     ],
-    "experiments": {
-      "typedRoutes": true
-    },
     "extra": {
       "router": {
         "origin": false
