--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@clerk/clerk-js": "^5.14.0",
     "@expo/metro-runtime": "~3.2.1",
     "@hookform/resolvers": "^3.3.4",
-    "@kade-net/fgs-rn": "^0.1.5",
+    "@kade-net/fgs-rn": "^0.1.14",
     "@kade-net/portals-parser": "^0.0.23",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.7.2",
@@ -89,6 +89,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "~1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-controller": "^1.13.4",
     "react-native-opengraph-kit": "^3.0.1",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
