--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   "dependencies": {
     "@apollo/client": "^3.9.5",
     "@aptos-labs/ts-sdk": "^1.8.0",
+    "@bacons/expo-router-top-tabs": "^1.0.0",
     "@clerk/clerk-js": "^5.14.0",
     "@expo/metro-runtime": "~3.2.1",
     "@hookform/resolvers": "^3.3.4",
-    "@kade-net/fgs-rn": "^0.1.14",
+    "@kade-net/fgs-rn": "^0.1.26",
     "@kade-net/portals-parser": "^0.0.23",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.4",
     "@tamagui/config": "^1.108.2",
     "@tamagui/lucide-icons": "^1.108.2",
     "@tamagui/metro-plugin": "^1.108.2",
