--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@kade-net/portals-parser": "^0.0.23",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
-    "@shopify/flash-list": "1.6.4",
     "@tamagui/config": "^1.108.2",
     "@tamagui/lucide-icons": "^1.108.2",
     "@tamagui/metro-plugin": "^1.108.2",
