--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
       "package": "com.kadenet.poseidon",
       "googleServicesFile": "./google-services.json",
       "versionCode": 80,
-      "softwareKeyboardLayoutMode": "pan"
+      "softwareKeyboardLayoutMode": "pan",
+      "blockedPermissions": ["android.permission.READ_MEDIA_IMAGES", "android.permission.READ_MEDIA_VIDEO"]
     },
     "web": {
       "bundler": "metro",
